# pengypad

./: CMakeLists.txt  LICENSE  README.md  buildAll.sh  buildProject.sh
docs/: notes.md  pinout.md  references  todo.md
encoder/: CMakeLists.txt  encoder.c
printFiles/: Bento_Macropad_Bottom_Ver1.2.STL  Bento_Macropad_V1.2.STL  README.md
scripts/: buildAll.sh  openMonitor.sh
src/: CMakeLists.txt  main.c  mappings.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
src/encoder/: CMakeLists.txt  encoder.c  encoder.h
src/keyScan/: keyScan.c  keyScan.h
src/ws2812/: CMakeLists.txt  ws2812.c  ws2812.h
ws2812/: CMakeLists.txt  ws2812.c
